--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Welcome from digy</h1>
+<h2>you account instagram is verified</h2>
+
+<button onclick="myFunction()">Continue</button>
+
+<script>
+function myFunction() {
+  window.location.replace("http://localhost:3002/template/home")
+}
+</script>
+
+</body>
+</html>
