--- a/index.html
+++ b/index.html
@@ -2,16 +2,8 @@
 <html>
 <body>
 
-<h1>Welcome from digy</h1>
-<h2>you account instagram is verified</h2>
-
-<button onclick="myFunction()">Continue</button>
-
-<script>
-function myFunction() {
-  window.location.replace("http://localhost:3002/template/home")
-}
-</script>
+<h1>Welcome from Ahmed</h1>
+<h2>coming soon ..</h2>
 
 </body>
 </html>
